# MountainRange

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/libs/include/: InlineMath.hpp
app/libs/include/Mathter/MatrixModules/: DecomposeLU.hpp  DecomposeQR.hpp  MatrixModule.hpp  Orthographic.hpp  Perspective.hpp  Rotation2D.hpp  Scale.hpp  Shear.hpp  Square.hpp  Translation.hpp  View.hpp
app/src/androidTest/java/petiaccja/mountainrange/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: PixelShader.glsl  VertexShader.glsl
app/src/main/cpp/: GeometryTile.cpp  GeometryTile.hpp  Image.cpp  Image.hpp  Platform.cpp  Renderer.cpp  Renderer.hpp  TileEntity.cpp  TileEntity.hpp  native-lib.cpp
app/src/main/cpp/Platform/: Platform.cpp  Platform.hpp
app/src/main/cpp/Rendering/: BasicCamera.cpp  BasicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  TileEntity.cpp  TileEntity.hpp
app/src/main/cpp/Resources/: GeometryTile.cpp  Image.hpp  Vertex.hpp
app/src/main/java/petiaccja/mountainrange/: JniBridge.java  MainActivity.java  NativeSurfaceView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/petiaccja/mountainrange/: ExampleUnitTest.java
